--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@prisma/client": "^5.20.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
-    "next": "14.2.14",
+    "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
